<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userListView"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip"
    android:layout_marginTop="60dp">

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/user_icon"
        android:ellipsize="marquee"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/follow_button"
        android:layout_width="90dip"
        android:layout_height="50dip"
        android:layout_alignRight="@id/user_name"
        android:ellipsize="marquee"
        android:text="@string/follow_button"
        android:textSize="14sp"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="followOrUnfollowUser"/>

    <TextView
        android:id="@+id/user_intro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/user_intro"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/user_icon"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:text="@string/user_intro"
        android:textSize="14sp" />

</RelativeLayout>