<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:layout_gravity="left|top">

        <AutoCompleteTextView
            android:layout_height="wrap_content"
            android:layout_width="240dp"
            android:text="@string/searchbox_tip"
            android:id="@+id/search_keyword"
            android:imeActionLabel="@string/search"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:textStyle="bold"
            android:textSize="16sp"
            android:onClick="searchUsers" />


    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="60dp"
        android:layout_gravity="left|top">

        <TextView
            android:id="@+id/no_user_search_result"
            android:layout_height="80dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"/>

        <ListView
            android:id="@+id/userListView"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/load_more"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/load_more_view"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentTop="true"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/load_more_progressBar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:padding="3dp"
            android:visibility="gone"
            />
    </RelativeLayout>
</FrameLayout>
